--- a/proyecto-isa/scss/style.css
+++ b/proyecto-isa/scss/style.css
@@ -1,11 +1,9 @@
 .lugar h1 {
   color: black;
 }
-
 .lugar h2 {
   color: black;
 }
-
 .lugar h3 {
   color: black;
 }
@@ -32,6 +30,4 @@
   text-align: center;
   padding: 40px;
   margin-right: 400px;
-} 
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
