--- a/proyecto-isa/estilos/estilos.css
+++ b/proyecto-isa/estilos/estilos.css
@@ -67,7 +67,6 @@ header nav {
 
 main .logo {
     font-size: 2.5em;
-    ;
     margin: 0;
     padding: 25px 30px;
     font-weight: bold;
@@ -155,16 +154,6 @@ img {
     text-align: center;
 }
 
-.historia {
-    color: black;
-    text-align: center;
-    padding: 40px;
-    margin-left: 60px;
-    margin-top: 60px;
-    margin-right: 400px;
-    border: 10px solid crimson;
-    border-radius: 50px;
-}
 
 .contenedorForm {
     display: flex;
@@ -282,63 +271,91 @@ img {
     color: white;
 }
 
+.content {
+    max-width: 1178px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5rem;
+}
 
-/* Formulario de contacto */
+.logo-contact span {
+    color: red;
+}
 
-.form-register {
-    width: 400px;
-    background-color: rgb(0, 0, 0, .6);
-    padding: 30px;
-    margin: auto;
-    margin-top: 100px;
-    border-radius: 4px;
-    font-family: 'calibri';
+.contact-wrapper {
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
+}
+
+.contact-wrapper {
+    padding: 1em
+}
+
+
+.contact-form form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contat-form form p {
     color: white;
-    box-shadow: 7px 13px 37px #000;
+    margin: 0;
+    padding: 1em;
 }
 
-.form-register h3 {
-    font-size: 22px;
-    margin-bottom: 20px;
+.contact-form .block {
+    grid-column: 1/3;
 }
 
-.controls {
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
     width: 100%;
-    background-color: rgb(0, 0, 0, .6);
-    padding: 10px;
-    border-radius: 4px;
-    margin-bottom: 16px;
-    border: 1px solid rgb(0, 0, 0, .6);
-    font-family: 'calibri';
-    font-size: 18px;
-    color: white;
-}
-
-.form-register p {
-    height: 40px;
-    text-align: center;
-    font-size: 18px;
-    line-height: 40px;
-}
-
-.form-register a {
-    color: white;
-    text-decoration: none;
-}
-
-.form-register a:hover {
-    color: white;
-    text-decoration: underline;
-}
-
-.form-register .botons {
-    width: 100%;
-    background-color: rgb(0, 0, 0, .6);
+    padding: -7em;
     border: none;
-    padding: 12px;
+    background: none;
+    outline: 0;
+    color: #fff;
+    border-bottom: 1px solid #d63031;
+}
+
+.contact-form form button {
+    background: #b70e21;
+    border: 0;
+    text-transform: uppercase;
+    padding: 1em;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus {
+    background: #d63031;
+    color: #fff;
+    transition: background-color 1s ease-out;
+    outline: 0;
+}
+
+.contact-info {
+    background: #000;
+}
+
+.contact-info h4,
+.contact-info ul,
+.contact-info p {
+    text-align: center;
     color: white;
-    margin: 16px 0;
-    font-size: 16px;
+    margin: 0 0 1rem 0;
+}
+
+.contact-info ul {
+    list-style: none;
+    padding: 0;
+}
+
+.contact-info ul li {
+    padding: 3em;
+}
+
+.mapa {
+    padding: 3em;
 }
 
 /* footer  */
@@ -378,9 +395,9 @@ footer {
             " tela  licra"
             " tela  cuero";
         grid-template-columns: 90vw;
-        ;
         grid-template-rows: auto auto auto auto auto;
     }
+
 
     body {
         background-image: url("../img/fondo2.jpg");
@@ -393,6 +410,25 @@ footer {
         min-height: 100vh;
     }
 
+}
+
+
+@media (min-width: 700px) {
+    .contact-wrapper {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    .contact-wrapper {
+        padding: 2em;
+    }
+
+    .contact-info h4,
+    .contact-info ul,
+    .contact-info p {
+        padding: 1em;
+        text-align: left;
+    }
 }
 
 @media screen and (max-width:768px) {
@@ -417,6 +453,7 @@ footer {
         flex-direction: column;
         min-height: 100vh;
     }
+
 }
 
 
@@ -443,4 +480,8 @@ footer {
         flex-direction: column;
         min-height: 100vh;
     }
+
+
+
+
 }
